<resources>
    <string name="app_name">MQTT Dashboard</string>
    <string name="action_settings">Settings</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_broker">Add Broker</string>
    <string name="title_activity_add_broker">Add Broker</string>
    <string name="broker_name">Broker Name</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="password">Password</string>
    <string name="client_id_must_be_unique">Client ID (must be unique)</string>
    <string name="username">Username</string>
    <string name="key_brokerNames">brokerNames</string>
    <string name="title_activity__dashboard">Dashboard</string>
    <string name="title_activity_edit_broker">Edit Broker</string>
    <string name="key_brokerConfig">brokerConfig_</string>
    <string name="add_metric">Add Metric</string>

    <string name="metric_name">Metric Name</string>
    <string name="topic">Topic</string>
    <string name="topic_publish">Topic (publish)</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="qos_0">QoS 0</string>
    <string name="qos_1">QoS 1</string>
    <string name="qos_2">QoS 2</string>
    <string name="retained">Retained</string>

    <string name="key_brokerMetrics">brokerMetrics_</string>

</resources>